made it look a little nicer

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="/js/index.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>The Doughouse</h1>
+    <div class="pageHeading">
+      <h1 class="pageTitle">The DougHouse</h1>
+      <p class="pageDescription">Reviews for the tl;dr</p>
+    </div>
 
-    <div id=reviews>
+    <div id="reviews">
     </div>
   </body>
 
