--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
   </head>
   <body>
+
     <div class="pageHeading">
       <h1 class="pageTitle">The DougHouse</h1>
-      <p class="pageDescription">Reviews for the tl;dr</p>
+      <p class="pageDescription">Movie reviews for the tl;dr</p>
     </div>
 
     <div id="reviews">
     </div>
+    <input type="button" class="loadMoreButton" value="Load More"/>
   </body>
 
 
