--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
     <div class="pageHeading">
       <h1 class="pageTitle">The DougHouse</h1>
+
+      <form action="http://localhost:8080/searchReviews" method="post" id="searchForm" class="searchForm">
+        <input type="text" name="searchQuery" class="searchBox" placeholder="search">
+      </form>
+
       <p class="pageDescription">Movie reviews for the tl;dr</p>
     </div>
 
