added search through title functionality and implemented pagination (load more button) for that too

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div class="pageHeading">
       <h1 class="pageTitle">The DougHouse</h1>
 
-      <form action="http://localhost:8080/searchReviews" method="post" id="searchForm" class="searchForm">
+      <form id="searchForm" class="searchForm">
         <input type="text" name="searchQuery" class="searchBox" placeholder="search">
+        <input type="submit" class="submitButton">
       </form>
 
       <p class="pageDescription">Movie reviews for the tl;dr</p>
