--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="/js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -19,7 +24,7 @@
       <p class="pageDescription">Movie reviews for the tl;dr</p>
     </div>
 
-    <div id="reviews">
+    <div id="reviews" class="mdl-grid">
     </div>
     <input type="button" class="loadMoreButton" value="Load More"/>
   </body>
