added animation to button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div mdl-grid>
       <button class="mdl-cell mdl-cell--2-col mdl-cell--5-offset-desktop mdl-cell--3-offset-tablet mdl-cell--1-offset-phone
-        loadMoreButton mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+        loadMoreButton mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
         View More
       </button>
     </div>
