got rid of cruft in css and added back clicking the header to navigate home

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="mdl-grid">
-      <h2 class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">The DougHouse</h2>
+      <h2 class="pageTitle mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">The DougHouse</h2>
     </div>
 
     <div class="mdl-grid">
