aligned search bar and site description for all devices

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </div>
 
     <div class="mdl-grid">
-      <p class="mdl-cell mdl-cell--4-col mdl-cell--2-offset-desktop">
-        Movie reviews for the tl;dr
+      <p class="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--2-col-phone  mdl-cell--2-offset-desktop">
+        Who let the reviews out?
       </p>
-      <div class="mdl-cell mdl-cell--4-col mdl-textfield mdl-js-textfield mdl-textfield--expandable
+      <div class="searchBox mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--2-col-phone  mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
         <label class="mdl-button mdl-js-button mdl-button--icon"
                for="waterfall-exp">
